--- a/Task 3/package.json
+++ b/Task 3/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.3",
+    "mongoose-aggregate-paginate-v2": "^1.0.6",
     "nodemon": "^3.0.1"
   }
 }
