--- a/Task 3/package.json
+++ b/Task 3/package.json
@@ -9,6 +9,7 @@
   "author": "Roshan Pokhrel",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.3",
