--- a/Task 3/package.json
+++ b/Task 3/package.json
@@ -12,8 +12,10 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   }
 }
