--- a/Task 3/.gitignore
+++ b/Task 3/.gitignore
@@ -1,3 +1,5 @@
 node_modules/
 .env
 uploads/
+serviceAccountKey.json
+client_secret_746657085275-pbekoukrfp1t1b11m0m30k5m03ukvaft.apps.googleusercontent.com.json
