--- a/Task 3/package.json
+++ b/Task 3/package.json
@@ -11,11 +11,18 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
+    "firebase": "^10.5.0",
+    "firebase-admin": "^11.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "swagger-jsdoc": "5.0.1",
+    "swagger-ui-express": "^5.0.0"
   }
 }
