--- a/Task 3/package.json
+++ b/Task 3/package.json
@@ -17,10 +17,13 @@
     "express-session": "^1.17.3",
     "firebase": "^10.5.0",
     "firebase-admin": "^11.11.0",
+    "googleapis": "^128.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mjml": "^4.14.1",
     "mongoose": "^7.5.3",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "swagger-jsdoc": "5.0.1",
     "swagger-ui-express": "^5.0.0"
